# xmlada

./: .cvsignore  .gitattributes  .gitignore  .gitlab-ci.plan  .gitlab-ci.yml  .gitreview  AUTHORS  Makefile  Makefile.314.in  Makefile.in  Makefile.module  Makefile.module.gcc  Makefile.module.in  Makefile.module.nt  Makefile.nt  Makefile.vms  README  README.NT  README.md  TODO  aclocal.m4  build_all.adb  build_all.gpr  config.sub  configure  configure.in  encodings.ads  features  features-17  features-170  features-31  features-32  features-33  features-40  features-41  features-42  features-43  features-44  features-440  features-45  (+26 more)
distrib/: xmlada.gpr  xmlada.gpr.in  xmlada_dom.gpr  xmlada_gps.py  xmlada_gtk_no_module.gpr  xmlada_input.gpr  xmlada_no_gtk.gpr  xmlada_sax.gpr  xmlada_schema.gpr  xmlada_shared.gpr.in  xmlada_unicode.gpr
docs/: .cvsignore  Makefile  Makefile.in  Makefile.vms  conf.py  dom.rst  index.rst  input.rst  intro.rst  sax.rst  schema.rst  unicode.rst  using.rst  xml.css  xml.texi
dom/: Makefile  dom-core-attrs.adb  dom-core-attrs.ads  dom-core-cdata_sections.ads  dom-core-character_datas.adb  dom-core-character_datas.ads  dom-core-document_fragments.ads  dom-core-document_types.adb  dom-core-document_types.ads  dom-core-documents.adb  dom-core-documents.ads  dom-core-elements.adb  dom-core-elements.ads  dom-core-entity_references.ads  dom-core-nodes.adb  dom-core-nodes.ads  dom-core-notations.adb  dom-core-notations.ads  dom-core-processing_instructions.ads  dom-core-texts.adb  dom-core-texts.ads  dom-core.adb  dom-core.ads  dom-readers.adb  dom-readers.ads  dom.ads  dom.gpr  tree_readers.adb  tree_readers.ads  xmlada_dom.gpr
input_sources/: Makefile  input_sources-file.adb  input_sources-file.ads  input_sources-http.adb  input_sources-http.ads  input_sources-socket.adb  input_sources-socket.ads  input_sources-strings.adb  input_sources-strings.ads  input_sources.adb  input_sources.ads  (+2 more)
(+518 files in other folders)
