AC_INIT(XML/Ada,3.2w,report@adacore.com,xmlada)
AC_CANONICAL_SYSTEM

# Also update docs/xml.texi, and in AC_INIT above
XMLADA_MAJOR_VERSION=3
XMLADA_MINOR_VERSION=2w

AC_PROG_CC
AC_CHECK_PROGS(DVIPS, dvips, "")
AC_CHECK_PROGS(MAKEINFO, makeinfo, "")
AC_CHECK_PROGS(TEXI2DVI, texi2dvi, "")
AC_CHECK_PROGS(PDFTEX, pdftex, "")
AC_CHECK_PROGS(TEX, tex, "")
AM_GNAT_BUILDS_SHARED

IFS=' '

# Defaults
AC_PROG_INSTALL
AC_PROG_LN_S
MKDIR="mkdir -p"

# Overrides
case "${host_os}" in
  lynxos*)
    CP="cp -p"
    MKDIR="mkdir -p -f"
    ;;

  cygwin*|mingw32*)
    LN="cp -p -f"
    ;;
esac

AC_SUBST(MKDIR)
AC_SUBST(CC)

AC_OUTPUT(shared.gpr Makefile Makefile.314 dom/test/default.gpr docs/Makefile xmlada-config distrib/xmlada_shared.gpr)
