AC_INIT(XML/Ada,4.5.0w,report@adacore.com,xmlada)
AC_CANONICAL_SYSTEM

# Also update in AC_INIT above
XMLADA_VERSION=AC_PACKAGE_VERSION()

AM_GNAT_BUILDS_SHARED
AM_SO_SUFFIX

# Defaults
AC_PROG_INSTALL
AC_PROG_LN_S
MKDIR="mkdir -p"

# Overrides
case "${host_os}" in
  lynxos*)
    CP="cp -p"
    MKDIR="mkdir -p -f"
    ;;

  cygwin*|mingw32*)
    LN="cp -p -f"
    ;;
esac

AC_SUBST(MKDIR)
AC_SUBST(CC)

LIB=`basename $libdir`
AC_SUBST(LIB)

AC_OUTPUT(shared.gpr Makefile Makefile.314 dom/test/default.gpr xmlada-config distrib/xmlada_shared.gpr)
